<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KeisanGame</string>
    
    <!-- TitleActivity -->
    <string name="title">KEISAN GAME</string>
    <string name="startNormal">通常モード</string>
    <string name="startEndless">エンドレスモード</string>
    
    <!-- MainActivity -->
    <string name="question_sample">Sample</string>
    <string name="answer_sample">10</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="n0">0</string>
    <string name="clear">clear</string>
    <string name="enter">enter</string>

    <!-- ResultActivity -->
    <string name="result">結果</string>
    <string name="again">もう一度</string>
</resources>
